Updated index.html template

--- a/index.html
+++ b/index.html
@@ -9,69 +9,39 @@
 </head>
 
 <body>
+    <!-- Background Image (Rainier) -->
+    <div class="background-section"></div>
+
     <!-- Header -->
     <header class="header">
-        <img src="images/Traverse The Cascades Logo.png" alt="TTC Logo">
+        <a href="index.html">
+            <img src="images/Traverse The Cascades Logo.png" alt="TTC Logo" class="header-logo">
+        </a>
         <nav class="nav-links">
-            <a href="#oregon">Oregon</a>
-            <a href="#washington">Washington</a>
-            <a href="#northern-california">Northern California</a>
-            <a href="#western-idaho">Western Idaho</a>
-            <a href="#british-columbia">British Columbia</a>
+            <a href="oregon.html">Oregon</a>
+            <a href="washington.html">Washington</a>
+            <a href="california.html">Northern California</a>
+            <a href="idaho.html">Western Idaho</a>
+            <a href="british_columbia.html">British Columbia</a>
         </nav>
     </header>
 
-    <!-- Background -->
-    <div class="background-section">
-        <div class="background-content">
-            <img src="images/Mount_Rainier.jpg">
-            <h1>Traverse The Cascades</h1>
-            <p>Discover the beauty of the Pacific Northwest.</p>
-        </div>
+    <!-- Logo in front of Rainier Image (Center of Screen) -->
+    <div class="logo-container">
+        <img src="images/Traverse The Cascades Logo.png" alt="TTC Logo" class="logo-front">
     </div>
 
-    <!-- Spacing -->
-    <div class="spacer"></div>
-
-    <!-- Hover Images Section -->
+    <!-- Hovering Images -->
     <div class="image-gallery">
-        <div class="image-container" data-text="Cities">
+        <a href="cities.html" class="image-container" data-text="Cities">
             <img src="images/Portland.jpg" alt="Cities">
-        </div>
-        <div class="image-container" data-text="Beaches">
+        </a>
+        <a href="beaches.html" class="image-container" data-text="Beaches">
             <img src="images/Cannon_Beach.jpg" alt="Beaches">
-        </div>
-        <div class="image-container" data-text="National Parks">
-            <img src="images/Redwoods.jpg" alt="National Parks">
-        </div>
-    </div>
-
-    <!-- Content Sections -->
-    <div class="content">
-        <section id="oregon">
-            <h2>Oregon</h2>
-            <p>Test</p>
-        </section>
-
-        <section id="washington">
-            <h2>Washington</h2>
-            <p>Test</p>
-        </section>
-
-        <section id="northern-california">
-            <h2>Northern California</h2>
-            <p>Test</p>
-        </section>
-
-        <section id="western-idaho">
-            <h2>Western Idaho</h2>
-            <p>Test</p>
-        </section>
-
-        <section id="british-columbia">
-            <h2>British Columbia</h2>
-            <p>Test</p>
-        </section>
+        </a>
+        <a href="state_parks.html" class="image-container" data-text="State Parks">
+            <img src="images/Redwoods.jpg" alt="State Parks">
+        </a>
     </div>
 
     <!-- Footer -->
