Completed index.html template

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="ttc.css">
 </head>
 
-<body>
+<body class="home-page">
     <!-- Background Image (Rainier) -->
     <div class="background-section"></div>
 
