--- a/beaches.html
+++ b/beaches.html
@@ -4,14 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beaches - Traverse The Cascades</title>
+    <title>Traverse The Cascades</title>
     <link rel="stylesheet" href="ttc.css">
 </head>
 
 <body>
+
     <!-- Header -->
     <header class="header">
-        <a href="index.html"><img src="images/Traverse The Cascades Logo.png" alt="TTC Logo"></a>
+        <a href="index.html">
+            <img src="images/Traverse The Cascades Logo.png" alt="TTC Logo" class="header-logo">
+        </a>
         <nav class="nav-links">
             <a href="oregon.html">Oregon</a>
             <a href="washington.html">Washington</a>
@@ -20,19 +23,6 @@
             <a href="british_columbia.html">British Columbia</a>
         </nav>
     </header>
-
-    <!-- Main Content for Beaches -->
-    <div class="content">
-        <h1>Beaches in the Cascades</h1>
-        <p>Explore the beautiful beaches along the Pacific Coast, from Washington to Oregon!</p>
-        <ul>
-            <li>Cannon Beach, Oregon</li>
-            <li>Ruby Beach, Washington</li>
-            <li>Ocean Shores, Washington</li>
-            <li>Florence, Oregon</li>
-        </ul>
-        <!-- Add more content or images relevant to beaches -->
-    </div>
 
     <!-- Footer -->
     <footer class="footer">
