--- a/cities.html
+++ b/cities.html
@@ -4,14 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cities - Traverse The Cascades</title>
+    <title>Traverse The Cascades</title>
     <link rel="stylesheet" href="ttc.css">
 </head>
 
 <body>
+
     <!-- Header -->
     <header class="header">
-        <a href="index.html"><img src="images/Traverse The Cascades Logo.png" alt="TTC Logo"></a>
+        <a href="index.html">
+            <img src="images/Traverse The Cascades Logo.png" alt="TTC Logo" class="header-logo">
+        </a>
         <nav class="nav-links">
             <a href="oregon.html">Oregon</a>
             <a href="washington.html">Washington</a>
@@ -20,19 +23,6 @@
             <a href="british_columbia.html">British Columbia</a>
         </nav>
     </header>
-
-    <!-- Main Content for Cities -->
-    <div class="content">
-        <h1>Cities in the Cascades</h1>
-        <p>Explore vibrant cities located in the heart of the Cascades. From Portland to Vancouver, discover what makes these cities unique!</p>
-        <ul>
-            <li>Portland, Oregon</li>
-            <li>Seattle, Washington</li>
-            <li>Eugene, Oregon</li>
-            <li>Spokane, Washington</li>
-        </ul>
-        <!-- Add more content or images relevant to cities -->
-    </div>
 
     <!-- Footer -->
     <footer class="footer">
