--- a/oregon.html
+++ b/oregon.html
@@ -4,14 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oregon - Traverse The Cascades</title>
+    <title>Traverse The Cascades</title>
     <link rel="stylesheet" href="ttc.css">
 </head>
 
 <body>
+
     <!-- Header -->
     <header class="header">
-        <a href="index.html"><img src="images/Traverse The Cascades Logo.png" alt="TTC Logo"></a>
+        <a href="index.html">
+            <img src="images/Traverse The Cascades Logo.png" alt="TTC Logo" class="header-logo">
+        </a>
         <nav class="nav-links">
             <a href="oregon.html">Oregon</a>
             <a href="washington.html">Washington</a>
@@ -21,15 +24,9 @@
         </nav>
     </header>
 
-    <!-- Content for Oregon -->
-    <div class="content">
-        <h1>Oregon</h1>
-        <p>Welcome to Oregon! Explore its stunning landscapes, cities, and national parks.</p>
-    </div>
-
     <!-- Footer -->
     <footer class="footer">
-        <p>Copyright: © 2025 Traverse The Cascades. All rights reserved.</p> 
+        <p>Copyright: © 2025 Traverse The Cascades. All rights reserved.</p>
     </footer>
 
 </body>
