--- a/state_parks.html
+++ b/state_parks.html
@@ -4,14 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>State Parks - Traverse The Cascades</title>
+    <title>Traverse The Cascades</title>
     <link rel="stylesheet" href="ttc.css">
 </head>
 
 <body>
+
     <!-- Header -->
     <header class="header">
-        <a href="index.html"><img src="images/Traverse The Cascades Logo.png" alt="TTC Logo"></a>
+        <a href="index.html">
+            <img src="images/Traverse The Cascades Logo.png" alt="TTC Logo" class="header-logo">
+        </a>
         <nav class="nav-links">
             <a href="oregon.html">Oregon</a>
             <a href="washington.html">Washington</a>
@@ -20,19 +23,6 @@
             <a href="british_columbia.html">British Columbia</a>
         </nav>
     </header>
-
-    <!-- Main Content for State Parks -->
-    <div class="content">
-        <h1>State Parks in the Cascades</h1>
-        <p>Discover the best state parks in the Cascades region, offering amazing hiking, wildlife, and stunning views.</p>
-        <ul>
-            <li>Mount Rainier National Park, Washington</li>
-            <li>Crater Lake National Park, Oregon</li>
-            <li>Redwood National Park, California</li>
-            <li>Olympic National Park, Washington</li>
-        </ul>
-        <!-- Add more content or images relevant to state parks -->
-    </div>
 
     <!-- Footer -->
     <footer class="footer">
