--- a/washington.html
+++ b/washington.html
@@ -4,14 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Washington - Traverse The Cascades</title>
+    <title>Traverse The Cascades</title>
     <link rel="stylesheet" href="ttc.css">
 </head>
 
 <body>
+
     <!-- Header -->
     <header class="header">
-        <a href="index.html"><img src="images/Traverse The Cascades Logo.png" alt="TTC Logo"></a>
+        <a href="index.html">
+            <img src="images/Traverse The Cascades Logo.png" alt="TTC Logo" class="header-logo">
+        </a>
         <nav class="nav-links">
             <a href="oregon.html">Oregon</a>
             <a href="washington.html">Washington</a>
@@ -20,12 +23,6 @@
             <a href="british_columbia.html">British Columbia</a>
         </nav>
     </header>
-
-    <!-- Content for Washington -->
-    <div class="content">
-        <h1>Washington</h1>
-        <p>Welcome to Washington! Discover its famous cities, national parks, and outdoor adventures.</p>
-    </div>
 
     <!-- Footer -->
     <footer class="footer">
