--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <nav class="nav-links">
             <a href="oregon.html">Oregon</a>
             <a href="washington.html">Washington</a>
+            <a href="idaho.html"> Idaho</a>
             <a href="california.html">Northern California</a>
-            <a href="idaho.html">Western Idaho</a>
             <a href="british_columbia.html">British Columbia</a>
         </nav>
     </header>
