--- a/state_parks.html
+++ b/state_parks.html
@@ -16,11 +16,13 @@
             <img src="images/Traverse The Cascades Logo.png" alt="TTC Logo" class="header-logo">
         </a>
         <nav class="nav-links">
-            <a href="oregon.html">Oregon</a>
-            <a href="washington.html">Washington</a>
-            <a href="california.html">Northern California</a>
-            <a href="idaho.html">Western Idaho</a>
-            <a href="british_columbia.html">British Columbia</a>
+            <nav class="nav-links">
+                <a href="oregon.html">Oregon</a>
+                <a href="washington.html">Washington</a>
+                <a href="idaho.html"> Idaho</a>
+                <a href="california.html">Northern California</a>
+                <a href="british_columbia.html">British Columbia</a>
+            </nav>
         </nav>
     </header>
 
