Fixed Maps and Weather API

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
             <img src="images/Traverse The Cascades Logo.png" alt="TTC Logo" class="header-logo">
         </a>
         <nav class="nav-links">
-            <a href="oregon.html">Oregon</a>
-            <a href="washington.html">Washington</a>
-            <a href="idaho.html"> Idaho</a>
-            <a href="california.html">Northern California</a>
-            <a href="british_columbia.html">British Columbia</a>
+            <a href="states_provinces/oregon.html">Oregon</a>
+            <a href="states_provinces/washington.html">Washington</a>
+            <a href="states_provinces/idaho.html"> Idaho</a>
+            <a href="states_provinces/california.html">Northern California</a>
+            <a href="states_provinces/british_columbia.html">British Columbia</a>
         </nav>
     </header>
 
@@ -33,13 +33,13 @@
 
     <!-- Hovering Images -->
     <div class="image-gallery">
-        <a href="cities.html" class="image-container" data-text="Cities">
+        <a href="landscapes/cities.html" class="image-container" data-text="Cities">
             <img src="images/Portland.jpg" alt="Cities">
         </a>
-        <a href="beaches.html" class="image-container" data-text="Beaches">
+        <a href="landscapes/beaches.html" class="image-container" data-text="Beaches">
             <img src="images/Cannon_Beach.jpg" alt="Beaches">
         </a>
-        <a href="state_parks.html" class="image-container" data-text="State Parks">
+        <a href="landscapes/state_parks.html" class="image-container" data-text="State Parks">
             <img src="images/Redwoods.jpg" alt="State Parks">
         </a>
     </div>
