Created stylized headers for each state/province page

--- a/states_provinces/british_columbia.html
+++ b/states_provinces/british_columbia.html
@@ -24,12 +24,49 @@
         </nav>
     </header>
 
-    <h1>British Columbia</h1>
+    <div class="background-section-british-columbia">
+        <h1>British Columbia</h1>
+    </div>
 
-    <!-- Weather API -->
-    <h2 id="page-title"></h2>
-    <h3 class="forecast-title">6-Hour Forecast</h3>
-    <div id="hourly-forecast" class="hourly-container"></div>
+    <div style="text-align: center; width: 80%; margin: 20px auto;">
+
+        <h2>Geography</h2>
+
+        <p>British Columbia is a province of extraordinary natural beauty, defined by its diverse and dramatic
+            landscapes. From the rugged Pacific coastline with its rocky shores and misty inlets to the towering peaks
+            of the Coast and Rocky Mountains, the province offers an unparalleled outdoor experience. The ancient
+            forests of the Great Bear Rainforest shelter some of the oldest and tallest trees in the world, while the
+            crystal-clear waters of Okanagan Lake provide a stunning contrast to the rolling vineyards of the
+            surrounding valley. In the north, vast wilderness areas remain largely untouched, offering a glimpse into
+            Canada's raw and untamed nature. Whether exploring alpine trails, kayaking along jagged shorelines, or
+            unwinding in the picturesque wine country, British Columbia's landscapes are as diverse as they are
+            breathtaking.</p>
+
+        <h2>History</h2>
+
+        <p>The province's history is deeply rooted in both Indigenous cultures and early European exploration. For
+            thousands of years, Indigenous Nations such as the Haida, Coast Salish, and Nlaka'pamux have lived in
+            harmony with the land, developing rich traditions that continue to thrive today. European contact began in
+            the late 18th century, with explorers like James Cook and George Vancouver mapping the coastline. The Fraser
+            River and Cariboo Gold Rushes of the 19th century brought an influx of settlers, shaping many of the
+            communities that exist today. British Columbia's history as a fur trading hub, its eventual entry into
+            Canadian Confederation in 1871, and the construction of the Canadian Pacific Railway all played crucial
+            roles in its development. Today, visitors can immerse themselves in the past by exploring Indigenous
+            cultural centers, historic trading posts, and Gold Rush-era towns like Barkerville.</p>
+
+        <h2>Cities & Culture</h2>
+
+        <p>Vancouver, the province's largest city, is known for its stunning waterfront setting, multicultural vibrancy,
+            and thriving arts and technology sectors. Nestled between the mountains and the ocean, it offers an urban
+            experience deeply connected to nature. Victoria, the capital, blends colonial-era architecture with coastal
+            charm, while Kelowna and the Okanagan region are famous for their wineries, orchards, and warm climate.
+            Whistler, one of the world's premier outdoor destinations, draws visitors year-round for skiing, hiking, and
+            mountain biking. In the north, Prince George serves as a gateway to the province's vast wilderness, offering
+            adventure and solitude in equal measure. Whether enjoying the cosmopolitan energy of Vancouver or the
+            tranquility of the remote coastline, British Columbia offers a unique combination of culture, history, and
+            natural wonder.</p>
+
+    </div>
 
     <!-- Google Maps -->
     <div style="display: flex; justify-content: center; align-items: center; height: 500px;">
@@ -38,6 +75,10 @@
             width="80%" height="450" style="border:0; border-radius: 10px;" allowfullscreen="" loading="lazy"></iframe>
     </div>
 
+    <!-- Weather API -->
+    <h2 id="page-title"></h2>
+    <h3 class="forecast-title">6-Hour Forecast</h3>
+    <div id="hourly-forecast" class="hourly-container"></div>
 
     <!-- Footer -->
     <footer class="footer">
