--- a/states_provinces/california.html
+++ b/states_provinces/california.html
@@ -24,29 +24,69 @@
         </nav>
     </header>
 
-    <h1>Northern California</h1>
+    <div class="background-section-california">
+        <h1>Northern California</h1>
+    </div>
+
+    <div style="text-align: center; width: 80%; margin: 20px auto;">
+
+        <h2>Geography</h2>
+
+        <p>Northern California is home to an incredible range of landscapes, from the rugged cliffs and crashing waves
+            of the Pacific coastline to the towering redwoods and the snow-covered summits of the Sierra Nevada. The
+            Redwood National and State Parks protect some of the tallest trees on Earth, creating a breathtaking,
+            cathedral-like environment, while Lake Tahoe's sparkling blue waters and surrounding peaks make it a premier
+            destination for outdoor adventure in any season. The rolling vineyards of Napa and Sonoma bring a pastoral
+            elegance to the region, while Lassen Volcanic National Park showcases dramatic geothermal activity and
+            alpine beauty. Whether hiking beneath ancient redwood canopies, gazing out over dramatic ocean views, or
+            enjoying the peaceful charm of wine country, Northern California's scenery is as diverse as it is
+            spectacular.</p>
+
+        <h2>History</h2>
+
+        <p>The history of Northern California is as fascinating as its landscapes. Indigenous tribes such as the Miwok,
+            Yurok, and Pomo have lived in the region for thousands of years, preserving rich traditions that still
+            influence local culture today. The Spanish arrived in the 18th century, leaving their mark through missions
+            and settlements, but it was the discovery of gold at Sutter's Mill in 1848 that changed the region forever.
+            The Gold Rush spurred one of the most significant migrations in U.S. history, fueling rapid growth and
+            economic expansion. In the 20th century, Northern California became a leader in global innovation with the
+            rise of Silicon Valley, shaping the modern technological landscape. Visitors can explore the area's
+            deep-rooted history at sites like Old Sacramento, the California State Capitol Museum, and the preserved
+            mining towns of the Sierra foothills.</p>
+
+        <h2>Cities & Culture</h2>
+
+        <p>San Francisco, the most well-known city in Northern California, is celebrated for its famous Golden Gate
+            Bridge, historic cable cars, and dynamic arts and culinary scene. Its mix of unique neighborhoods and scenic
+            waterfront make it a city rich in both history and innovation. Sacramento, the state capital, combines
+            political importance with a storied Gold Rush past, while San Jose, the heart of Silicon Valley, is a global
+            center for technology and entrepreneurship. Santa Cruz, known for its laid-back coastal atmosphere, draws
+            surfers and outdoor enthusiasts, while the historic towns of Eureka and Mendocino provide a glimpse into
+            Northern California's past with their well-preserved architecture and stunning ocean vistas. From San
+            Francisco's vibrant streets to the serene beauty of the North Coast, Northern California offers an
+            unforgettable blend of nature, history, and culture.</p>
+
+    </div>
+
+    <!-- Google Maps -->
+    <div style="display: flex; justify-content: center; align-items: center; height: 500px;">
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3978358.1443610363!2d-124.84897338298104!3d39.82817576498774!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54d15398c0562495%3A0xf709faf8ff0db4c9!2sNorthern%20California%2C%20CA!5e0!3m2!1sen!2sus!4v1707852143847!5m2!1sen!2sus"
+            width="80%" height="450" style="border:0; border-radius: 10px;" allowfullscreen="" loading="lazy">
+        </iframe>
+    </div>
 
     <!-- Weather API -->
     <h2 id="page-title"></h2>
     <h3 class="forecast-title">6-Hour Forecast</h3>
     <div id="hourly-forecast" class="hourly-container"></div>
 
-    <!-- Google Maps -->
-    <div style="display: flex; justify-content: center; align-items: center; height: 500px;">
-        <iframe 
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3978358.1443610363!2d-124.84897338298104!3d39.82817576498774!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54d15398c0562495%3A0xf709faf8ff0db4c9!2sNorthern%20California%2C%20CA!5e0!3m2!1sen!2sus!4v1707852143847!5m2!1sen!2sus" 
-            width="80%" height="450" style="border:0; border-radius: 10px;" allowfullscreen="" loading="lazy">
-        </iframe>
-    </div>
+    <!-- Footer -->
+    <footer class=" footer">
+        <p>Copyright: © 2025 Traverse The Cascades. All rights reserved.</p>
+    </footer>
 
-
-
-        <!-- Footer -->
-        <footer class=" footer">
-            <p>Copyright: © 2025 Traverse The Cascades. All rights reserved.</p>
-        </footer>
-
-        <script src="../ttc.js"></script>
+    <script src="../ttc.js"></script>
 </body>
 
 </html>
