--- a/states_provinces/idaho.html
+++ b/states_provinces/idaho.html
@@ -24,18 +24,59 @@
         </nav>
     </header>
 
-    <h1>Idaho</h1>
+    <div class="background-section-idaho">
+        <h1>Idaho</h1>
+    </div>
+
+    <div style="text-align: center; width: 80%; margin: 20px auto;">
+
+        <h2>Geography</h2>
+
+        <p>Idaho's landscapes are striking and varied. From the towering peaks of the Rocky Mountains to the wide-open
+            plains and meandering river valleys, the state is a haven for those who appreciate natural beauty. The
+            Sawtooth Mountains, with their rugged summits and pristine alpine lakes, are a notable feature of the
+            landscape, while the Snake River carves through deep canyons, providing a sense of both grandeur and
+            serenity. Remote wilderness areas, like the Frank Church-River of No Return Wilderness, offer some of the
+            most untouched and rugged terrain in the country. Whether you're navigating through dense forests, exploring
+            vast desert landscapes, or unwinding by one of Idaho's countless lakes, the state's diverse scenery invites
+            exploration at every turn.</p>
+
+        <h2>History</h2>
+
+        <p>The history of Idaho is as rich and varied as its landscapes. Indigenous peoples, such as the Nez Perce,
+            Shoshone, and Bannock tribes, have called this land home for millennia, cultivating deep connections with
+            the environment. The arrival of European settlers in the 19th century saw the rise of fur trading, mining,
+            and agricultural settlements, all of which contributed to the state's development. The Lewis and Clark
+            Expedition passed through the region in the early 1800s, setting the stage for westward expansion. The
+            discovery of gold in the mid-1800s brought a flood of miners and adventurers, forever altering the region's
+            economy and culture. Today, sites like the Nez Perce National Historic Park, Shoshone Falls, and the Idaho
+            State Historical Museum allow visitors to explore and reflect on this significant history.</p>
+
+        <h2>Cities & Culture</h2>
+
+        <p>Boise, the state's capital and largest city, offers a blend of urban sophistication and easy access to
+            nature. Known for its burgeoning tech sector, vibrant arts community, and emphasis on sustainability, Boise
+            captures the essence of Idaho's forward-thinking spirit. Idaho Falls, located along the Snake River, is a
+            charming city surrounded by natural beauty, while Coeur d'Alene, situated next to its namesake lake, is
+            known for its stunning views and outdoor recreation opportunities. Twin Falls, with its iconic Shoshone
+            Falls, attracts visitors looking to experience both natural wonders and small-town charm. Meanwhile, Sun
+            Valley is renowned for its world-class ski resorts and year-round outdoor activities, making it a top
+            destination for adventure seekers. From Boise's urban offerings to the scenic beauty of Idaho's outdoor
+            treasures, the state's cities and landscapes provide a perfect mix of culture, history, and adventure.</p>
+
+    </div>
+
+    <!-- Google Maps -->
+    <div style="display: flex; justify-content: center; align-items: center; height: 500px;">
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8412873.869832273!2d-117.2131933903491!3d44.06820188926665!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54aefbaf4b6d5569%3A0x9b12f0e12cfa4083!2sIdaho%2C%20USA!5e0!3m2!1sen!2sus!4v1707851096322!5m2!1sen!2sus"
+            width="80%" height="450" style="border:0; border-radius: 10px;" allowfullscreen="" loading="lazy"></iframe>
+    </div>
 
     <!-- Weather API -->
     <h2 id="page-title"></h2>
     <h3 class="forecast-title">6-Hour Forecast</h3>
     <div id="hourly-forecast" class="hourly-container"></div>
-
-    <!-- Google Maps -->   
-    <div style="display: flex; justify-content: center; align-items: center; height: 500px;">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8412873.869832273!2d-117.2131933903491!3d44.06820188926665!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54aefbaf4b6d5569%3A0x9b12f0e12cfa4083!2sIdaho%2C%20USA!5e0!3m2!1sen!2sus!4v1707851096322!5m2!1sen!2sus" 
-            width="80%" height="450" style="border:0; border-radius: 10px;" allowfullscreen="" loading="lazy"></iframe>
-    </div>    
 
     <!-- Footer -->
     <footer class="footer">
