--- a/states_provinces/washington.html
+++ b/states_provinces/washington.html
@@ -24,18 +24,62 @@
         </nav>
     </header>
 
-    <h1>Washington</h1>
+    <div class="background-section-washington">
+        <h1>Washington</h1>
+    </div>
+
+    <div style="text-align: center; width: 80%; margin: 20px auto;">
+
+        <h2>Geography</h2>
+
+        <p>Washington's landscapes are truly remarkable. From the rugged shores of the Pacific Ocean to the towering
+            peaks of the Cascade and Olympic Mountains, the state offers an unparalleled variety of natural beauty.
+            Mount Rainier, with its glacial expanses and vibrant wildflower meadows, stands as an iconic symbol of the
+            region, while the lush Hoh Rain Forest showcases an ancient, temperate ecosystem. The San Juan Islands,
+            scattered across the Puget Sound, provide a tranquil retreat with stunning coastal vistas and abundant
+            marine life, while the Columbia River Gorge captivates with its striking basalt cliffs and cascading
+            waterfalls. Whether traversing dense evergreen forests, exploring rolling vineyards, or admiring the serene
+            waters of the Puget Sound, Washington's diverse scenery leaves a lasting impression.</p>
+
+        <h2>History</h2>
+
+        <p>Washington's history adds depth to its extraordinary landscapes. Indigenous peoples, including the Coast
+            Salish, Yakama, and Spokane tribes, have inhabited this land for thousands of years, preserving rich
+            cultural traditions that continue to thrive. European exploration began in the late 18th century with
+            Captain George Vancouver mapping the region's waterways, followed by the Lewis and Clark Expedition in the
+            early 19th century. The expansion of the fur trade, coupled with the development of the timber and railroad
+            industries, fueled settlement and economic growth. The Klondike Gold Rush of the late 19th century
+            transformed Seattle into a pivotal gateway to Alaska, while later advancements in aviation and technology
+            solidified Washington's role as a center of global innovation. Those interested in the state's historical
+            evolution can explore landmarks such as Fort Nisqually, the Klondike Gold Rush National Historical Park, and
+            the Washington State History Museum.</p>
+
+        <h2>Cities & Culture</h2>
+
+        <p>Seattle, the state's largest city, serves as a dynamic hub of culture, commerce, and technological
+            advancement. The iconic Space Needle defines its skyline, while Pike Place Market remains a historic and
+            bustling centerpiece along the waterfront. Known for its thriving arts scene, pioneering music history, and
+            renowned culinary landscape, Seattle embodies both tradition and progress. Olympia, the state capital,
+            blends political significance with scenic beauty, while Spokane offers a balance of metropolitan amenities
+            and outdoor recreation. Tacoma is recognized for its rich maritime and artistic heritage, while Bellingham,
+            situated near the Canadian border, combines a vibrant downtown with access to breathtaking natural
+            surroundings. In Walla Walla, expansive vineyards produce some of the nation's finest wines, attracting
+            connoisseurs from around the world. Each city across Washington contributes to the state's diverse
+            character, making it a compelling destination for visitors and residents alike.</p>
+
+    </div>
+
+    <!-- Google Maps -->
+    <div style="display: flex; justify-content: center; align-items: center; height: 500px;">
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8553570.413063427!2d-124.84897338298104!3d47.75107612816239!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x548b2a1f3e0c90df%3A0x70efb8704a376c14!2sWashington%2C%20USA!5e0!3m2!1sen!2sus!4v1707851004845!5m2!1sen!2sus"
+            width="80%" height="450" style="border:0; border-radius: 10px;" allowfullscreen="" loading="lazy"></iframe>
+    </div>
 
     <!-- Weather API -->
     <h2 id="page-title"></h2>
     <h3 class="forecast-title">6-Hour Forecast</h3>
     <div id="hourly-forecast" class="hourly-container"></div>
-
-    <!-- Google Maps -->
-    <div style="display: flex; justify-content: center; align-items: center; height: 500px;">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8553570.413063427!2d-124.84897338298104!3d47.75107612816239!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x548b2a1f3e0c90df%3A0x70efb8704a376c14!2sWashington%2C%20USA!5e0!3m2!1sen!2sus!4v1707851004845!5m2!1sen!2sus" 
-            width="80%" height="450" style="border:0; border-radius: 10px;" allowfullscreen="" loading="lazy"></iframe>
-    </div>        
 
     <!-- Footer -->
     <footer class="footer">
