Created template for landscapes pages

--- a/landscapes/beaches.html
+++ b/landscapes/beaches.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Traverse The Cascades</title>
+    <title>Beaches - Traverse The Cascades</title>
     <link rel="stylesheet" href="../ttc.css">
 </head>
 
@@ -23,6 +23,40 @@
             <a href="../states_provinces/british_columbia.html">British Columbia</a>
         </nav>
     </header>
+
+    <!-- Background Section -->
+    <section class="background-section-beaches">
+        <h1>Beaches of the Pacific Northwest</h1>
+    </section>
+
+    <!-- Main Content -->
+    <main class="content">
+        <h2>Beautiful Beaches</h2>
+        <ul class="beaches-list">
+            <li>
+                <img src="../images/Cannon_Beach.jpg" alt="Cannon Beach">
+                <div class="beach-text">
+                    <h3>Cannon Beach</h3>
+                    <p>Famous for Haystack Rock, this Oregon beach is a must-see with stunning views, tide pools, and
+                        vibrant sunsets.</p>
+                </div>
+            </li>
+            <li>
+                <img src="../images/Ruby_Beach.jpg" alt="Ruby Beach">
+                <div class="beach-text">
+                    <h3>Placeholder</h3>
+                    <p>Placeholder</p>
+                </div>
+            </li>
+            <li>
+                <img src="../images/Glass_Beach.jpg" alt="Glass Beach">
+                <div class="beach-text">
+                    <h3>Placeholder</h3>
+                    <p>Placeholder</p>
+                </div>
+            </li>
+        </ul>
+    </main>
 
     <!-- Footer -->
     <footer class="footer">
