--- a/landscapes/state_parks.html
+++ b/landscapes/state_parks.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Traverse The Cascades</title>
+    <title>State Parks - Traverse The Cascades</title>
     <link rel="stylesheet" href="../ttc.css">
 </head>
 
@@ -16,20 +16,75 @@
             <img src="../images/Traverse The Cascades Logo.png" alt="TTC Logo" class="header-logo">
         </a>
         <nav class="nav-links">
-            <nav class="nav-links">
-                <a href="../states_provinces/oregon.html">Oregon</a>
-                <a href="../states_provinces/washington.html">Washington</a>
-                <a href="../states_provinces/idaho.html"> Idaho</a>
-                <a href="../states_provinces/california.html">Northern California</a>
-                <a href="../states_provinces/british_columbia.html">British Columbia</a>
-            </nav>
+            <a href="../states_provinces/oregon.html">Oregon</a>
+            <a href="../states_provinces/washington.html">Washington</a>
+            <a href="../states_provinces/california.html">Northern California</a>
+            <a href="../states_provinces/idaho.html">Western Idaho</a>
+            <a href="../states_provinces/british_columbia.html">British Columbia</a>
         </nav>
     </header>
+
+    <!-- Background Section -->
+    <section class="background-section-parks">
+        <h1>State Parks of the Pacific Northwest</h1>
+    </section>
+
+    <!-- Main Content -->
+    <main class="content">
+        <h2>Beautiful Parks</h2>
+        <ul class="parks-list">
+            <li>
+                <img src="../images/Redwoods.jpg" alt="Redwoods">
+                <div class="park-text">
+                    <h3>Placeholder</h3>
+                    <p>Placeholder</p>
+                </div>
+            </li>
+            <li>
+                <img src="" alt="Mount Rainier">
+                <div class="park-text">
+                    <h3>Placeholder</h3>
+                    <p>Placeholder</p>
+                </div>
+            </li>
+            <li>
+                <img src="" alt="Multnomah Falls">
+                <div class="park-text">
+                    <h3>Placeholder</h3>
+                    <p>Placeholder</p>
+                </div>
+            </li>
+        </ul>
+    </main>
 
     <!-- Footer -->
     <footer class="footer">
         <p>Copyright: © 2025 Traverse The Cascades. All rights reserved.</p>
     </footer>
+
+</body>
+
+</html>
+<!-- Header -->
+<header class="header">
+    <a href="../index.html">
+        <img src="../images/Traverse The Cascades Logo.png" alt="TTC Logo" class="header-logo">
+    </a>
+    <nav class="nav-links">
+        <nav class="nav-links">
+            <a href="../states_provinces/oregon.html">Oregon</a>
+            <a href="../states_provinces/washington.html">Washington</a>
+            <a href="../states_provinces/idaho.html"> Idaho</a>
+            <a href="../states_provinces/california.html">Northern California</a>
+            <a href="../states_provinces/british_columbia.html">British Columbia</a>
+        </nav>
+    </nav>
+</header>
+
+<!-- Footer -->
+<footer class="footer">
+    <p>Copyright: © 2025 Traverse The Cascades. All rights reserved.</p>
+</footer>
 
 </body>
 
