--- a/landscapes/cities.html
+++ b/landscapes/cities.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Traverse The Cascades</title>
+    <title>Cities - Traverse The Cascades</title>
     <link rel="stylesheet" href="../ttc.css">
 </head>
 
@@ -16,15 +16,46 @@
             <img src="../images/Traverse The Cascades Logo.png" alt="TTC Logo" class="header-logo">
         </a>
         <nav class="nav-links">
-            <nav class="nav-links">
-                <a href="../states_provinces/oregon.html">Oregon</a>
-                <a href="../states_provinces/washington.html">Washington</a>
-                <a href="../states_provinces/idaho.html"> Idaho</a>
-                <a href="../states_provinces/california.html">Northern California</a>
-                <a href="../states_provinces/british_columbia.html">British Columbia</a>
-            </nav>
+            <a href="../states_provinces/oregon.html">Oregon</a>
+            <a href="../states_provinces/washington.html">Washington</a>
+            <a href="../states_provinces/california.html">Northern California</a>
+            <a href="../states_provinces/idaho.html">Western Idaho</a>
+            <a href="../states_provinces/british_columbia.html">British Columbia</a>
         </nav>
     </header>
+
+    <!-- Background Section -->
+    <section class="background-section-cities">
+        <h1>Cities of the Pacific Northwest</h1>
+    </section>
+
+    <!-- Main Content -->
+    <main class="content">
+        <h2>Beautiful Cities</h2>
+        <ul class="cities-list">
+            <li>
+                <img src="../images/Portland.jpg" alt="Portland">
+                <div class="city-text">
+                    <h3>Placeholder</h3>
+                    <p>Placeholder</p>
+                </div>
+            </li>
+            <li>
+                <img src="" alt="Seattle">
+                <div class="city-text">
+                    <h3>Placeholder</h3>
+                    <p>Placeholder</p>
+                </div>
+            </li>
+            <li>
+                <img src="" alt="British Columbia">
+                <div class="city-text">
+                    <h3>Placeholder</h3>
+                    <p>Placeholder</p>
+                </div>
+            </li>
+        </ul>
+    </main>
 
     <!-- Footer -->
     <footer class="footer">
